# project_structure_layout

./: CMakeLists.txt  README.md  base-kit.cmake
documentation/: Project_structure.txt  rules.txt  syntax_rules.txt
src/: CMakeLists.txt  main.cpp
src/just_foo/: just_foo.cpp  just_foo.hpp
src/lib_foo/: foo.cpp  foo.hpp
src/utils/: includes.hpp  integrated_cxx_libs.hpp  utils.cpp  utils.hpp
